--- a/prs.html
+++ b/prs.html
@@ -21,7 +21,7 @@
     <!-- Hero Section -->
     <section id="hero">
         <h1>Hey, I am Mahnudul Hassaan</h1>
-        <p class="subtitle">a web developer</p>
+        <p class="Subtitle">a web developer</p>
     </section>
 
     <!-- Projects Section -->
